# excel_parsing

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  generate_test_excels.py  instructions.md  local_schemas.json  pyproject.toml  template.py
.github/workflows/: build-test-lint.yml
artifacts/: smoke_excel_schema.json
backend/: config.py  excel_processor.py  file_store.py  log_store.py  main.py  models.py  observability.py  requirements.in  schema_store.py  verification.py
backend/data/: ingest_logs.db  local_schemas.json
backend/extractor/: engine.py  transforms.py
backend/llm/: client.py  mapper.py  prompts.py  validator.py
backend/tests/: test_api.py
backend/uploads/local-dev-user/: a1bdfe9ea4fec044.xlsx
cli/: README.md  demo_schema.json  excel_ingest_cli.py  requirements.txt
docs/: technical-approach.md  testing-and-deployment.md  usage.md
test_excels/: multi_sheet_sample.xlsx
test_schemas/: multi_sheet_sample.schema.json  people_sample.schema.json  sales_sample.schema.json
tests/: accept_outputs.py  generate_test_excels.py  test_e2e.py
tests/excels/: people_sample.xlsx  sales_sample.xlsx
