[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ingest-excel-cli"
version = "0.1.0"
description = "CLI for the local-first Excel ingestion system"
packages = [{include = "cli"}]

[tool.poetry.dependencies]
python = "^3.12"
typer = ">=0.12.3"
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.0"
ruff = ">=0.6.0"
mypy = ">=1.11.0"

[tool.poetry.scripts]
ingest-excel = "cli.excel_ingest_cli:app"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
